--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "vite": "^4.4.7"
   },
   "dependencies": {
+    "@sweetalert2/theme-bulma": "^5.0.15",
+    "@sweetalert2/themes": "^5.0.15",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.1",
     "hover.css": "^2.3.2",
-    "npm": "^9.8.1"
+    "npm": "^9.8.1",
+    "scrollreveal": "^4.0.9",
+    "sweetalert2": "^11.6.13"
   }
 }
